--- a/src/main/resources/assets/omnipotent/lang/en_us.lang
+++ b/src/main/resources/assets/omnipotent/lang/en_us.lang
@@ -3,3 +3,27 @@ itemGroup.Omnipotent mod=Omnipotent mod
 #tooltip
 kaia.damage=UNINTELLIGIBLE
 kaia.speed=UNINTELLIGIBLE
+#gui
+guikaia.enchant=Enchantments
+guikaia.enchant.previouspage=Previous page
+guikaia.enchant.nextpage=Next page
+guikaia.enchant.label0=Default level
+guikaia.enchant.message=The level cannot be above 32767, must contain only numbers, and cannot be below 0.
+
+guikaia.config=Kaia Settings
+guikaia.config.minerationarea=Mineration area
+guikaia.config.rangeattack=Range attack
+guikaia.config.attackfriendentities=Attack friendly entities
+guikaia.config.attackallentities=Attack all entities
+guikaia.config.blockinteractiondistance=Block interaction distance
+guikaia.config.counterattack=Counterattack
+guikaia.config.attackyourwolf=Attack your wolf
+guikaia.config.interactwithliquidblocks=Interagir com blocos liquidos
+guikaia.config.donotbreaktileentityblocks=Do Not Break Tile Entity Blocks
+#keys
+keykaia.category=Kaia Keys
+keykaia.config=Settings
+keykaia.returnkaia=Return Kaia
+keykaia.enchantmentkaia=Kaia Enchantments
+#messages in chat
+kaia.message.void=WHEREABOUTS Y150
