--- a/src/main/resources/assets/omnipotent/lang/pt_br.lang
+++ b/src/main/resources/assets/omnipotent/lang/pt_br.lang
@@ -27,3 +27,4 @@ keykaia.returnkaia=Retorna Kaia
 keykaia.enchantmentkaia=Encantamentos Kaia
 #messages in chat
 kaia.message.void=PARADEIRO Y150
+kaia.message.returndropitems=item dropado na posição
