--- a/src/main/resources/assets/omnipotent/lang/en_us.lang
+++ b/src/main/resources/assets/omnipotent/lang/en_us.lang
@@ -34,11 +34,14 @@ guikaia.config.maxslotcount=The maximum stack size
 guikaia.config.autobackpack=Auto Backpack
 guikaia.config.autobackpackentities=Auto Backpack Entities
 guikaia.config.playerscantrespawn=Players can´t respawn
-guikaia.config.chargeitemsininventory=Energize items
+guikaia.config.chargeEnergyItemsInInventory=Energize items in inventory
 guikaia.config.summonlightbolstinkill=Summon LightBolts in attack
 guikaia.config.banEntitiesAttacked=Ban Entities
 guikaia.config.autoKill=Auto Kill
 guikaia.config.rangeautokill=Range auto Kill
+guikaia.config.chargeManaItemsInInventory=Charge mana in the inventory items
+guikaia.config.chargeEnergyInBlocksAround=Charge energy in nearby blocks
+guikaia.config.chargeManaInBlocksAround=Charge mana in nearby blocks
 #keys
 keykaia.category=Kaia Keys
 keykaia.config=Settings
