--- a/src/main/resources/assets/omnipotent/lang/pt_br.lang
+++ b/src/main/resources/assets/omnipotent/lang/pt_br.lang
@@ -58,7 +58,7 @@ keykaia.backpack=Mochila da kaia
 keykaia.player=Menu de jogadores
 keykaia.spectate=Bloquear modo espectador
 keykaia.creative=Bloquear modo creativo
-keykaia.showinfo=Exibir/ocultar Info da Kaia
+keykaia.kaiashowinfo=Exibir/ocultar Info da Kaia
 keykaia.getKaiaBetweenSaves=Obter kaia dos saves
 #messages in chat
 kaia.message.void=PARADEIRO Y150
