--- a/src/main/resources/assets/omnipotent/lang/en_us.lang
+++ b/src/main/resources/assets/omnipotent/lang/en_us.lang
@@ -59,7 +59,7 @@ keykaia.player=Player menu
 keykaia.spectate=Block spectate mode
 keykaia.creative=Block creative mode
 keykaia.kaiashowinfo=Show/hide Kaia info
-keykaia.getKaiaBetweenSaves=To obtain the keys of the saves
+keykaia.getKaiaBetweenSaves=To obtain the Kaia of the saves
 #messages in chat
 kaia.message.void=WHEREABOUTS Y150
 kaia.message.returndropitems=Item dropped at position
