--- a/src/main/resources/assets/omnipotent/lang/pt_br.lang
+++ b/src/main/resources/assets/omnipotent/lang/pt_br.lang
@@ -49,6 +49,7 @@ guikaia.config.optionOfColor=Cor do item
 guikaia.config.activeCustomPlayerName=Nome personlizado do player
 guikaia.config.fastBreakBlocks=Quebrar blocos de forma rápida
 guikaia.config.rgbEnchantmentGlitch=Efeito RGB em aurea de encantamento
+guikaia.config.banPlayerToSealedDimension=Banir o player para uma dimensão selada
 #keys
 keykaia.category=Botões Kaia
 keykaia.config=Configurações
@@ -102,3 +103,4 @@ function.description.optionOfColor=Os valores dessa opção definem a cor que se
 function.description.customPlayerName=Essa opção caso ativada irá exibir como nome do player o nome que estiver nela usando efeitos especias de cor, outros players verão isso.
 function.description.fastBreakBlocks=Essa opção otimiza a quebra de blocos em area para ser mais rapido (alguns efeitos como sons, e animação de quebra não serão executados).
 function.description.rgbEnchantmentGlitch=Essa opção ativa o efeito RGB no encantamento da espada.
+function.description.banPlayerToSealedDimension=Essa opção bani o player morto pela kaia para uma outra dimensão, nesta dimensão não nascem mobs, portais não funcionam todos os itens do player são deletados e o respawn é dentro dela.
