now ban player is ban entity

--- a/src/main/resources/assets/omnipotent/lang/en_us.lang
+++ b/src/main/resources/assets/omnipotent/lang/en_us.lang
@@ -49,7 +49,7 @@ guikaia.config.optionOfColor=Item color
 guikaia.config.activeCustomPlayerName=Custom player name
 guikaia.config.fastBreakBlocks=Break blocks quickly
 guikaia.config.rgbEnchantmentGlitch=RGB Effect in Enchantment Aura
-guikaia.config.banPlayerToSealedDimension=Ban player to sealed dimension
+guikaia.config.banEntityToSealedDimension=Ban Entity to sealed dimension
 #keys
 keykaia.category=Kaia Keys
 keykaia.config=Settings
@@ -103,4 +103,4 @@ function.description.optionOfColor=The values of this option define the color th
 function.description.customPlayerName=This option, when enabled, will display the player's name using special color effects. Other players will be able to see it.
 function.description.fastBreakBlocks=This option optimizes block breaking in the area to be faster (some effects such as sounds and breaking animation will not be executed).
 function.description.rgbEnchantmentGlitch=This option activates the RGB effect on sword enchantment.
-function.description.banPlayerToSealedDimension=This option bans player killed by kaia.
+function.description.banEntityToSealedDimension=This option banishes the player killed by Kaia to another dimension. In this dimension, no mobs spawn, portals do not function, all items of the player are deleted, and the respawn occurs within it. If it is a mob, it will not be killed but rather sent to the other dimension.
