Translations and new obliteration function for Kaia.

--- a/src/main/resources/assets/omnipotent/lang/en_us.lang
+++ b/src/main/resources/assets/omnipotent/lang/en_us.lang
@@ -50,6 +50,7 @@ guikaia.config.activeCustomPlayerName=Custom player name
 guikaia.config.fastBreakBlocks=Break blocks quickly
 guikaia.config.rgbEnchantmentGlitch=RGB Effect in Enchantment Aura
 guikaia.config.banEntityToSealedDimension=Ban Entity to sealed dimension
+guikaia.config.maximumObliteration=Obliterate an entity
 #keys
 keykaia.category=Kaia Keys
 keykaia.config=Settings
@@ -104,3 +105,4 @@ function.description.customPlayerName=This option, when enabled, will display th
 function.description.fastBreakBlocks=This option optimizes block breaking in the area to be faster (some effects such as sounds and breaking animation will not be executed).
 function.description.rgbEnchantmentGlitch=This option activates the RGB effect on sword enchantment.
 function.description.banEntityToSealedDimension=This option banishes the player killed by Kaia to another dimension. In this dimension, no mobs spawn, portals do not function, all items of the player are deleted, and the respawn occurs within it. If it is a mob, it will not be killed but rather sent to the other dimension.
+function.description.maximumObliteration=This option obliterates the entity; it's useful when the entity isn't killed by normal Kaia.
